--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="css/footer.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
     <link type="text/css" rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -32,9 +33,77 @@
             </ul>
           </nav>
     </header>
-  <div class="librarybox">
-    <img src="imgs/library-1132573_1920.jpg" alt="img av bibliotek">
+  <div class="frontbox">
+    <img src="imgs/celso-405219.jpg" alt="img av solsystemet">
+    <div class="frontbox1">
+        <img src="imgs/samuel-zeller-158996.jpg" alt="img av mann i vrheadset">
+        <img src="imgs/luke-ellis-craven-400722.jpg" alt="img av en gammel mann">
+        <div class="textbox">
+            Read more about what we have
+            <i class="fa-solid fa-arrow-right"></i>
+        </div>
+    </div>
 </div>
+<img class="imgbarn" src="imgs/learn.jpg" alt="img av et barn">
+<h1 class="text">
+    For Kids
+</h1>
+<div class="imgbox">
+    <img class="kidreadbox" src="imgs/reading-2762010_1280.jpg" alt="barn som leser">
+    <img class="kidreadbox" src="imgs/markus-spiske-197281.jpg" alt="barn som leser">
+</div>
+<a class="read-more" href="kids.html" target="_blank">
+    Read more
+</a>
+<hr>
+<p class="text">For Teachers</p>
+<div class="imgbox">
+    <img class="vrmanbox" src="imgs/billetto-editorial-334686.jpg" alt="bilde av en mann i vr">
+</div>
+<a class="read-more" href="teachers.html" target="_blank">
+    Read more
+</a>
+<hr>
+<p class="text">Researchers</p>
+<div class="imgbox">
+    <img class="vrmanbox" src="imgs/people-219985_1280.jpg" alt="bilde av en mann i vr">
+</div>
+<a class="read-more" href="researchers.html" target="_blank">
+    Read more
+</a>
+<hr>
+<p class="text1">News</p>
+<div class="news-container">
+    <div class="news">
+        <img class="left-box" src="imgs/roberto-nickson-396152.jpg" alt="bilde av museum natt">
+        <img class="right-box" src="imgs/samuel-zeller-113381.jpg" alt="bilde av skjelett">
+    </div>
+    <div class="text-container">
+        <nav>
+            <ul>
+                <li><a href="#">Visiting Proferssor of Aeronautics</a></li>
+                <li><a href="#">Night in the Museum</a></li>
+                <li><a href="#">Energetica Exhibition on Loan</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
+<div class="news-container">
+    <div class="news">
+        <img class="left-box" src="imgs/mavis-cw-164128.jpg" alt="bilde insiden av musemu">
+        <img class="right-box" src="imgs/toa-heftiba-412579.jpg" alt="bilde av museum over">
+    </div>
+    <div class="text-container">
+        <nav>
+            <ul>
+                <li><a href="#">Accessibility</a></li>
+                <li><a href="#">Food and drink</a></li>
+                <li><a href="#">Shop</a></li>
+            </ul>
+        </nav>
+    </div>
+</div>
+
 <footer>
     <h2>
         Stay in the loop
