--- a/kids.html
+++ b/kids.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/kids.css">
+    <link type="text/css" rel="stylesheet" href="css/kids-tea-res-more.css">
     <link type="text/css" rel="stylesheet" href="css/footer.css">
     <link type="text/css" rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -34,18 +34,18 @@
           </nav>
     </header>
     <img src="imgs/learn.jpg" alt="img av et barn" class="imgbarn">
-    <h1>
+    <h1 class="kid-title">
         Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.
     </h1>
     <div class="kidreadbox">
         <img src="imgs/reading-2762010_1280.jpg" alt="img av et barn lese">
-        <p>
+        <p class="kid-title1">
             You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
         </p>
     </div>
   <div class="librarybox">
     <img src="imgs/library-1132573_1920.jpg" alt="img av bibliotek">
-    <p>
+    <p class="kid-title1">
         We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.  
     </p>
     <hr>
