--- a/teachers.html
+++ b/teachers.html
@@ -34,7 +34,7 @@
           </nav>
     </header>
     <img src="imgs/billetto-editorial-334686.jpg" alt="img av et barn" class="imgteacher">
-    <h1 class="teacher-title">
+    <h1 class="info-text1">
         As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.
         Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.
 
