--- a/news.html
+++ b/news.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kids</title>
+    <title>News</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/kids-tea-res-more.css">
     <link type="text/css" rel="stylesheet" href="css/footer.css">
+    <link type="text/css" rel="stylesheet" href="css/kids-tea-res-more.css">
     <link type="text/css" rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -33,23 +33,30 @@
             </ul>
           </nav>
     </header>
-    <img src="imgs/learn.jpg" alt="img av et barn" class="imgbarn">
-    <h1 class="info-text">
-        Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.
-    </h1>
-    <div class="kidreadbox">
-        <img src="imgs/reading-2762010_1280.jpg" alt="img av et barn lese">
-        <p class="info-text1">
-            You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
-        </p>
+    <div class="gridbox">
+        <img src="imgs/scott-webb-102825.jpg" alt="img av musemum" class="imgmuseum">
+        <div class="container-text">
+            <h1 class="info-text-news">
+                New's
+            </h1>
+            <p class="info-text-news1">
+                Know what is going on
+            </p>
+        </div>
     </div>
-  <div class="librarybox">
-    <img src="imgs/library-1132573_1920.jpg" alt="img av bibliotek">
-    <p class="info-text1">
-        We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.  
+    <p class="info-text">
+        Visiting Professor of Aeronautics
     </p>
-    <hr>
-</div>
+    <p class="info-text1">
+        It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.
+    </p>
+    <div class="gridbox1">
+        <img src="imgs/roberto-nickson-396152.jpg" alt="bilde av museum natt" class="imgnattmuseum">
+        <p class="info-text-news2">Night in the Museum</p>
+        <div class="gridbox-container">
+            <p class="night-text">Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
+        </div>
+    </div>
 <footer>
     <h2>
         Stay in the loop
