--- a/researchers.html
+++ b/researchers.html
@@ -34,11 +34,11 @@
           </nav>
     </header>
     <img src="imgs/people-219985_1280.jpg" alt="img av en researcher" class="imgrea">
-    <h1 class="rea-title">
+    <h1 class="info-text">
         Are you looking to get involved with our team of researchers and academics? 
     </h1>
     <img src="imgs/scientific-2040795_1280.jpg" alt="bilde av en lab" class="imgrea">
-    <p class="rea-title1">
+    <p class="info-text1">
         Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.  
     </p>
     <hr>
