--- a/index.html
+++ b/index.html
@@ -27,21 +27,24 @@
           <nav class="hamburger">
             <ul>
               <li><a href="index.html">Schools & preschools</a></li>
-              <li><a href="about.html">Internships</a></li>
-              <li><a href="contact.html">Contact information</a></li>
-              <li><a href="contact.html">information about CSM</a></li>
+              <li><a href="visit.html">Visit</a></li>
+              <li><a href="support.html">Contact information</a></li>
+              <li><a href="about.html">More about CSM</a></li>
             </ul>
           </nav>
     </header>
   <div class="frontbox">
-    <img src="imgs/celso-405219.jpg" alt="img av solsystemet">
+    <img src="imgs/celso-405219.jpg" alt="img av månen">
     <div class="frontbox1">
         <img src="imgs/samuel-zeller-158996.jpg" alt="img av mann i vrheadset">
         <img src="imgs/luke-ellis-craven-400722.jpg" alt="img av en gammel mann">
-        <div class="textbox">
-            Read more about what we have
-            <i class="fa-solid fa-arrow-right"></i>
-        </div>
+        <a href="spaces.html">
+            <div class="textbox">
+                <p class="transfrom-text">Read more about what we have
+                    <i class="fa-solid fa-arrow-right"></i>
+                </p>
+            </div>
+        </a>
     </div>
 </div>
 <img class="imgbarn" src="imgs/learn.jpg" alt="img av et barn">
@@ -49,8 +52,8 @@
     For Kids
 </h1>
 <div class="imgbox">
-    <img class="kidreadbox" src="imgs/reading-2762010_1280.jpg" alt="barn som leser">
-    <img class="kidreadbox" src="imgs/markus-spiske-197281.jpg" alt="barn som leser">
+    <img class="kidreadbox" src="imgs/reading-2762010_1280.jpg" alt="img av barn som leser">
+    <img class="kidreadbox" src="imgs/markus-spiske-197281.jpg" alt="img av leker">
 </div>
 <a class="read-more" href="kids.html" target="_blank">
     Read more
@@ -58,7 +61,7 @@
 <hr>
 <p class="text">For Teachers</p>
 <div class="imgbox">
-    <img class="vrmanbox" src="imgs/billetto-editorial-334686.jpg" alt="bilde av en mann i vr">
+    <img class="vrmanbox" src="imgs/billetto-editorial-334686.jpg" alt="img av en mann i vr">
 </div>
 <a class="read-more" href="teachers.html" target="_blank">
     Read more
@@ -66,7 +69,7 @@
 <hr>
 <p class="text">Researchers</p>
 <div class="imgbox">
-    <img class="vrmanbox" src="imgs/people-219985_1280.jpg" alt="bilde av en mann i vr">
+    <img class="vrmanbox" src="imgs/people-219985_1280.jpg" alt="img som ser i mikroskop">
 </div>
 <a class="read-more" href="researchers.html" target="_blank">
     Read more
@@ -75,15 +78,15 @@
 <p class="text1">News</p>
 <div class="news-container">
     <div class="news">
-        <img class="left-box" src="imgs/roberto-nickson-396152.jpg" alt="bilde av museum natt">
-        <img class="right-box" src="imgs/samuel-zeller-113381.jpg" alt="bilde av skjelett">
+        <img class="left-box" src="imgs/roberto-nickson-396152.jpg" alt="img av museum natt">
+        <img class="right-box" src="imgs/samuel-zeller-113381.jpg" alt="img av skjelett">
     </div>
     <div class="text-container">
         <nav>
             <ul>
-                <li><a href="#">Visiting Proferssor of Aeronautics</a></li>
-                <li><a href="#">Night in the Museum</a></li>
-                <li><a href="#">Energetica Exhibition on Loan</a></li>
+                <li><a href="news.html#professor-news" target="_blank">Visiting Professor of Aeronautics</a></li>
+                <li><a href="news.html#night-museum" target="_blank">Night in the Museum</a></li>
+                <li><a href="news.html#energetica-exhibition" target="_blank">Energetica Exhibition on Loan</a></li>
             </ul>
         </nav>
     </div>
@@ -96,9 +99,9 @@
     <div class="text-container">
         <nav>
             <ul>
-                <li><a href="#">Accessibility</a></li>
-                <li><a href="#">Food and drink</a></li>
-                <li><a href="#">Shop</a></li>
+                <li><a href="visit.html#accessibility">Accessibility</a></li>
+                <li><a href="visit.html#foodanddrink">Food and drink</a></li>
+                <li><a href="visit.html#shop">Shop</a></li>
             </ul>
         </nav>
     </div>
@@ -158,18 +161,10 @@
     <div class="boxfooter">
         <nav>
             <ul class="footer-nav">
-                <li>
-                    <a href="aboutus.html" class="title3">Contact information</a>
-                </li>
-                <li>
-                    <a href="support.html" class="title3">Schools & preschools</a>
-                </li>
-                <li>
-                    <a href="faq.html" class="title3">information about CSM</a>
-                </li>
-                <li>
-                    <a href="login.html" class="title3">Internships</a>
-                </li>
+              <li><a class="title3" href="index.html">Schools & preschools</a></li>
+              <li><a class="title3" href="visit.html">Visit</a></li>
+              <li><a class="title3" href="support.html">Contact information</a></li>
+              <li><a class="title3" href="news.html">More about CSM</a></li>
             </ul>
         </nav>
         <img src="imgs/icon-1719742.svg" alt="logobilde av CSM" class="logoimg">
