--- a/spaces.html
+++ b/spaces.html
@@ -154,6 +154,11 @@
         Sunday 9:00 - 13:00
         </p>
     </div>
+    <div class="socials">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-twitter"></i>
+    </div>
     <hr>
     <div class="boxfooter">
         <nav>
