--- a/support.html
+++ b/support.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kids</title>
+    <title>Support</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/kids-tea-res-more.css">
     <link type="text/css" rel="stylesheet" href="css/footer.css">
+    <link type="text/css" rel="stylesheet" href="css/kids-tea-res-more.css">
     <link type="text/css" rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -33,23 +33,28 @@
             </ul>
           </nav>
     </header>
-    <img src="imgs/learn.jpg" alt="img av et barn" class="imgbarn">
-    <h1 class="info-text">
-        Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.
-    </h1>
-    <div class="kidreadbox">
-        <img src="imgs/reading-2762010_1280.jpg" alt="img av et barn lese">
-        <p class="info-text1">
-            You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
-        </p>
+    <div class="gridbox">
+        <img src="imgs/toa-heftiba-412579.jpg" alt="img av musemum over" class="imgmuseum">
+        <div class="container-text">
+            <h1 class="info-text-news">
+                GET INVOLVED
+            </h1>
+            <p class="info-text-news1">
+                HELP US, SUPPORT US OR MORE
+            </p>
+        </div>
     </div>
-  <div class="librarybox">
-    <img src="imgs/library-1132573_1920.jpg" alt="img av bibliotek">
-    <p class="info-text1">
-        We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.  
-    </p>
+    <p class="info-text">Support</p>
+    <p class="info-text1">There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. </p>
+    <p class="info-text1">You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.</p>
+    <p class="info-text">Volunteer</p>
+    <p class="info-text1">A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.</p>
+    <p class="info-text1">You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.</p>
     <hr>
-</div>
+    <img src="imgs/exhibition-1863344_1920.jpg" alt="inside bilde museum" class="imgexo">
+    <p class="info-text">Internships</p>
+    <p class="info-text1">Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.</p>
+    <p class="info-text1">You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.</p>
 <footer>
     <h2>
         Stay in the loop
@@ -110,16 +115,16 @@
         <nav>
             <ul class="footer-nav">
                 <li>
-                    <a href="aboutus.html" class="title3">Contact information</a>
+                    <a href="support.html" class="title3">Contact information</a>
                 </li>
                 <li>
-                    <a href="support.html" class="title3">Schools & preschools</a>
+                    <a href="kids.html" class="title3">Schools & preschools</a>
                 </li>
                 <li>
                     <a href="faq.html" class="title3">information about CSM</a>
                 </li>
                 <li>
-                    <a href="login.html" class="title3">Internships</a>
+                    <a href="support.html" class="title3">Internships</a>
                 </li>
             </ul>
         </nav>
