--- a/index.html
+++ b/index.html
@@ -33,146 +33,158 @@
             </ul>
           </nav>
     </header>
-  <div class="frontbox">
-    <img src="imgs/celso-405219.jpg" alt="img av månen">
-    <div class="frontbox1">
-        <img src="imgs/samuel-zeller-158996.jpg" alt="img av mann i vrheadset">
-        <img src="imgs/luke-ellis-craven-400722.jpg" alt="img av en gammel mann">
-        <a href="spaces.html">
-            <div class="textbox">
-                <p class="transfrom-text">Read more about what we have
-                    <i class="fa-solid fa-arrow-right"></i>
-                </p>
-            </div>
-        </a>
+    <div class="center-box">
+        <div class="frontbox">
+          <div class="space-box">
+              <img src="imgs/celso-405219.jpg" alt="img av månen">
+          </div>
+          <div class="frontbox1">
+              <img src="imgs/samuel-zeller-158996.jpg" alt="img av mann i vrheadset">
+              <img src="imgs/luke-ellis-craven-400722.jpg" alt="img av en gammel mann">
+              <a href="spaces.html">
+                  <div class="textbox">
+                      <p class="transfrom-text">Read more about what we have
+                          <i class="fa-solid fa-arrow-right"></i>
+                      </p>
+                  </div>
+              </a>
+          </div>
     </div>
 </div>
-<img class="imgbarn" src="imgs/learn.jpg" alt="img av et barn">
-<h1 class="text">
-    For Kids
-</h1>
-<div class="imgbox">
-    <img class="kidreadbox" src="imgs/reading-2762010_1280.jpg" alt="img av barn som leser">
-    <img class="kidreadbox" src="imgs/markus-spiske-197281.jpg" alt="img av leker">
+<div class="center-box1">
+    <img class="imgbarn" src="imgs/learn.jpg" alt="img av et barn">
+    <h1 id="kidtext" class="text">
+        For Kids
+    </h1>
+    <div id="kidread" class="imgbox">
+        <img class="kidreadbox" src="imgs/reading-2762010_1280.jpg" alt="img av barn som leser">
+        <img class="kidreadbox" src="imgs/markus-spiske-197281.jpg" alt="img av leker">
+    </div>
+    <a id="readmorekid" class="read-more" href="kids.html" target="_blank">
+        Read more
+    </a>
+    <hr id="hide">
+    <p id="teachertext" class="text">For Teachers</p>
+    <div id="student" class="imgbox">
+        <img class="vrmanbox" src="imgs/billetto-editorial-334686.jpg" alt="img av en mann i vr">
+    </div>
+    <a id="studentreadmore" class="read-more" href="teachers.html" target="_blank">
+        Read more
+    </a>
+    <hr id="hide">
+    <p id="restext" class="text">Researchers</p>
+    <div id="researchers" class="imgbox">
+        <img id="vrmann" class="vrmanbox" src="imgs/people-219985_1280.jpg" alt="img som ser i mikroskop">
+    </div>
+    
+    <div class="spa"></div>
+    <div class="spa"></div>
+    <a id="readmorerea" class="read-more" href="researchers.html" target="_blank">
+        Read more
+    </a>
 </div>
-<a class="read-more" href="kids.html" target="_blank">
-    Read more
-</a>
 <hr>
-<p class="text">For Teachers</p>
-<div class="imgbox">
-    <img class="vrmanbox" src="imgs/billetto-editorial-334686.jpg" alt="img av en mann i vr">
-</div>
-<a class="read-more" href="teachers.html" target="_blank">
-    Read more
-</a>
-<hr>
-<p class="text">Researchers</p>
-<div class="imgbox">
-    <img class="vrmanbox" src="imgs/people-219985_1280.jpg" alt="img som ser i mikroskop">
-</div>
-<a class="read-more" href="researchers.html" target="_blank">
-    Read more
-</a>
-<hr>
-<p class="text1">News</p>
-<div class="news-container">
-    <div class="news">
-        <img class="left-box" src="imgs/roberto-nickson-396152.jpg" alt="img av museum natt">
-        <img class="right-box" src="imgs/samuel-zeller-113381.jpg" alt="img av skjelett">
+<div class="grid-container">
+    <p class="text1">News</p>
+    <div id="left-news" class="news-container">
+        <div class="news">
+            <img class="left-box" src="imgs/roberto-nickson-396152.jpg" alt="img av museum natt">
+            <img class="right-box" src="imgs/samuel-zeller-113381.jpg" alt="img av skjelett">
+        </div>
+        <div class="text-container">
+            <nav>
+                <ul>
+                    <li><a href="news.html#professor-news" target="_blank">Visiting Professor of Aeronautics</a></li>
+                    <li><a href="news.html#night-museum" target="_blank">Night in the Museum</a></li>
+                    <li><a href="news.html#energetica-exhibition" target="_blank">Energetica Exhibition on Loan</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
-    <div class="text-container">
-        <nav>
-            <ul>
-                <li><a href="news.html#professor-news" target="_blank">Visiting Professor of Aeronautics</a></li>
-                <li><a href="news.html#night-museum" target="_blank">Night in the Museum</a></li>
-                <li><a href="news.html#energetica-exhibition" target="_blank">Energetica Exhibition on Loan</a></li>
-            </ul>
-        </nav>
-    </div>
-</div>
-<div class="news-container">
-    <div class="news">
-        <img class="left-box" src="imgs/mavis-cw-164128.jpg" alt="bilde insiden av musemu">
-        <img class="right-box" src="imgs/toa-heftiba-412579.jpg" alt="bilde av museum over">
-    </div>
-    <div class="text-container">
-        <nav>
-            <ul>
-                <li><a href="visit.html#accessibility">Accessibility</a></li>
-                <li><a href="visit.html#foodanddrink">Food and drink</a></li>
-                <li><a href="visit.html#shop">Shop</a></li>
-            </ul>
-        </nav>
+    <div id="right-news" class="news-container">
+        <div class="news">
+            <img class="left-box" src="imgs/mavis-cw-164128.jpg" alt="bilde insiden av musemu">
+            <img class="right-box" src="imgs/toa-heftiba-412579.jpg" alt="bilde av museum over">
+        </div>
+        <div class="text-container">
+            <nav>
+                <ul>
+                    <li><a href="visit.html#accessibility" target="_blank">Accessibility</a></li>
+                    <li><a href="visit.html#foodanddrink" target="_blank">Food and drink</a></li>
+                    <li><a href="visit.html#shop" target="_blank">Shop</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </div>
-
 <footer>
-    <h2>
-        Stay in the loop
-    </h2>
-    <p class="subscribe">
-        Subscribe to the CSM's newsletter
-    </p>
-    <div class="boxnmail">
-        <form>
-            <input class="square-left" type="text" id="email" name="email" placeholder="Your email...">
-        </form>       
-        <button class="square-right">Send</button>
+    <div class="footer-container">
+        <h2>
+            Stay in the loop
+        </h2>
+        <p class="subscribe">
+            Subscribe to the CSM's newsletter
+        </p>
+        <div class="boxnmail">
+            <form>
+                <input class="square-left" type="text" id="email" name="email" placeholder="Your email...">
+            </form>       
+            <button class="square-right">Send</button>
+        </div>
+        <div class="square-under">
+            <p class="checkbox-text">
+            <input type="checkbox"> i have read and approved the register declaration.</p>
+        </div>
+        <hr id="hide">
+        <p class="title">
+            CSM
+        </p>
+        <p id="csm" class="title2">
+            Community Science Museum
+        </p>
+        <p class="title1">
+            Opening hours
+        </p>
+        <div class="title2">
+            <p>
+            Monday: Closed
+            </p>
+             <p>
+            Tuseday: 10:00 - 16:00
+            </p>
+             <p>
+            Wednesday: 10:00 - 16:00
+            </p>
+             <p>
+            Thursday: 10:00 - 16:00
+            </p>
+             <p>
+            Friday: 10:00 - 19:00
+            </p>
+             <p>
+            Saturday: 9:00 - 16:00
+            </p>
+             <p>
+            Sunday 9:00 - 13:00
+            </p>
+        </div>
+        <hr id="hide">
+        <div class="boxfooter">
+            <nav>
+                <ul class="footer-nav">
+                  <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                  <li><a class="title3" href="visit.html">Visit</a></li>
+                  <li><a class="title3" href="support.html">Contact information</a></li>
+                  <li><a class="title3" href="news.html">More about CSM</a></li>
+                </ul>
+            </nav>
+            <img src="imgs/icon-1719742.svg" alt="logobilde av CSM" class="logoimg">
+        </div>
+        <p class="copyright">
+            © 2023 Community Science Museum 
+            All rights reserved. 
+        </p>
     </div>
-    <div class="square-under">
-        <p class="checkbox-text">
-        <input type="checkbox"> i have read and approved the register declaration.</p>
-    </div>
-    <hr>
-    <p class="title">
-        CSM
-    </p>
-    <p class="title2">
-        Community Science Museum
-    </p>
-    <p class="title1">
-        Opening hours
-    </p>
-    <div class="title2">
-        <p>
-        Monday: Closed
-        </p>
-         <p>
-        Tuseday: 10:00 - 16:00
-        </p>
-         <p>
-        Wednesday: 10:00 - 16:00
-        </p>
-         <p>
-        Thursday: 10:00 - 16:00
-        </p>
-         <p>
-        Friday: 10:00 - 19:00
-        </p>
-         <p>
-        Saturday: 9:00 - 16:00
-        </p>
-         <p>
-        Sunday 9:00 - 13:00
-        </p>
-    </div>
-    <hr>
-    <div class="boxfooter">
-        <nav>
-            <ul class="footer-nav">
-              <li><a class="title3" href="index.html">Schools & preschools</a></li>
-              <li><a class="title3" href="visit.html">Visit</a></li>
-              <li><a class="title3" href="support.html">Contact information</a></li>
-              <li><a class="title3" href="news.html">More about CSM</a></li>
-            </ul>
-        </nav>
-        <img src="imgs/icon-1719742.svg" alt="logobilde av CSM" class="logoimg">
-    </div>
-    <p class="copyright">
-        © 2023 Community Science Museum 
-        All rights reserved. 
-    </p>
 </footer>
 </body>
 </html>
