--- a/kids.html
+++ b/kids.html
@@ -20,115 +20,116 @@
             </div>
             <input type="text" class="search-input" placeholder="Search...">
         </div>
+            <ul class="headerbox1">
+              <li><a href="index.html">Schools & preschools&nbsp;<i class="fa-solid fa-school"></i></a></li>
+              <li><a href="visit.html">Visit&nbsp; <i class="fa-solid fa-map"></i></a></li>
+              <li><a href="support.html">Contact information&nbsp;<i class="fa-solid fa-headset"></i></a></li>
+              <li><a href="about.html">More about CSM&nbsp;<i class="fa-solid fa-circle-info"></i></a></li>
+            </ul>
         <label for="hamburger-menu">
-            <i class="fas fa-bars"></i>
+            <i id="menu" class="fas fa-bars"></i>
           </label>
           <input type="checkbox" id="hamburger-menu">
           <nav class="hamburger">
             <ul>
               <li><a href="index.html">Schools & preschools</a></li>
-              <li><a href="about.html">Internships</a></li>
-              <li><a href="contact.html">Contact information</a></li>
-              <li><a href="contact.html">information about CSM</a></li>
+              <li><a href="visit.html">Visit</a></li>
+              <li><a href="support.html">Contact information</a></li>
+              <li><a href="about.html">More about CSM</a></li>
             </ul>
           </nav>
     </header>
-    <img src="imgs/learn.jpg" alt="img av et barn" class="imgbarn">
-    <h1 class="info-text">
-        Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.
-    </h1>
-    <div class="kidreadbox">
-        <img src="imgs/reading-2762010_1280.jpg" alt="img av et barn lese">
-        <p class="info-text1">
-            You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
-        </p>
+    <div class="imgbarn-container">
+        <img src="imgs/learn.jpg" alt="img av et barn" class="imgbarn">
     </div>
-  <div class="librarybox">
-    <img src="imgs/library-1132573_1920.jpg" alt="img av bibliotek">
-    <p class="info-text1">
-        We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.  
-    </p>
-    <hr>
-</div>
+    <div class="kid-container">
+        <h1 id="infotext" class="info-text">
+            Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.
+        </h1>
+        <div class="kidreadbox">
+            <img src="imgs/reading-2762010_1280.jpg" alt="img av et barn lese">
+            <p id="infotext1" class="info-text1">
+                You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.
+            </p>
+        </div>
+      <div class="librarybox">
+        <img src="imgs/library-1132573_1920.jpg" alt="img av bibliotek">
+        <p id="infotext1" class="info-text1">
+            We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.  
+        </p>
+        <hr>
+    </div>
+    </div>
 <footer>
-    <h2>
-        Stay in the loop
-    </h2>
-    <p class="subscribe">
-        Subscribe to the CSM's newsletter
-    </p>
-    <div class="boxnmail">
-        <form>
-            <input class="square-left" type="text" id="email" name="email" placeholder="Your email...">
-        </form>       
-        <button class="square-right">Send</button>
+    <div class="center">
+        <div class="footer-container">
+            <h2>
+                Stay in the loop
+            </h2>
+            <p class="subscribe">
+                Subscribe to the CSM's newsletter
+            </p>
+            <div class="boxnmail">
+                <form>
+                    <input class="square-left" type="text" id="email" name="email" placeholder="Your email...">
+                </form>       
+                <button class="square-right">Send</button>
+            </div>
+            <div class="square-under">
+                <p class="checkbox-text">
+                <input type="checkbox"> i have read and approved the register declaration.</p>
+            </div>
+            <hr id="hide">
+            <p class="title">
+                CSM
+            </p>
+            <p id="csm" class="title2">
+                Community Science Museum
+            </p>
+            <p class="title1">
+                Opening hours
+            </p>
+            <div class="title2">
+                <p>
+                Monday: Closed
+                </p>
+                 <p>
+                Tuseday: 10:00 - 16:00
+                </p>
+                 <p>
+                Wednesday: 10:00 - 16:00
+                </p>
+                 <p>
+                Thursday: 10:00 - 16:00
+                </p>
+                 <p>
+                Friday: 10:00 - 19:00
+                </p>
+                 <p>
+                Saturday: 9:00 - 16:00
+                </p>
+                 <p>
+                Sunday 9:00 - 13:00
+                </p>
+            </div>
+            <hr id="hide">
+            <div class="boxfooter">
+                <nav>
+                    <ul class="footer-nav">
+                      <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                      <li><a class="title3" href="visit.html">Visit</a></li>
+                      <li><a class="title3" href="support.html">Contact information</a></li>
+                      <li><a class="title3" href="news.html">More about CSM</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <img src="imgs/icon-1719742.svg" alt="logobilde av CSM" class="logoimg">
+            <p class="copyright">
+                © 2023 Community Science Museum 
+                All rights reserved. 
+            </p>
+        </div>
     </div>
-    <div class="square-under">
-        <p class="checkbox-text">
-        <input type="checkbox"> i have read and approved the register declaration.</p>
-    </div>
-    <hr>
-    <p class="title">
-        CSM
-    </p>
-    <p class="title2">
-        Community Science Museum
-    </p>
-    <p class="title1">
-        Opening hours
-    </p>
-    <div class="title2">
-        <p>
-        Monday: Closed
-        </p>
-         <p>
-        Tuseday: 10:00 - 16:00
-        </p>
-         <p>
-        Wednesday: 10:00 - 16:00
-        </p>
-         <p>
-        Thursday: 10:00 - 16:00
-        </p>
-         <p>
-        Friday: 10:00 - 19:00
-        </p>
-         <p>
-        Saturday: 9:00 - 16:00
-        </p>
-         <p>
-        Sunday 9:00 - 13:00
-        </p>
-    </div>
-    <div class="socials">
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-facebook"></i>
-        <i class="fa-brands fa-twitter"></i>
-    </div>
-    <hr>
-    <div class="boxfooter">
-        <nav>
-            <ul class="footer-nav">
-                <li>
-                    <a href="aboutus.html" class="title3">Contact information</a>
-                </li>
-                <li>
-                    <a href="support.html" class="title3">Schools & preschools</a>
-                </li>
-                <li>
-                    <a href="faq.html" class="title3">information about CSM</a>
-                </li>
-                <li>
-                    <a href="login.html" class="title3">Internships</a>
-                </li>
-            </ul>
-        </nav>
-        <img src="imgs/icon-1719742.svg" alt="logobilde av CSM" class="logoimg">
-    </div>
-    <p class="copyright">
-        © 2023 Community Science Museum 
-        All rights reserved. 
-    </p>
 </footer>
 </body>
 </html>
