--- a/teachers.html
+++ b/teachers.html
@@ -20,101 +20,104 @@
             </div>
             <input type="text" class="search-input" placeholder="Search...">
         </div>
+            <ul class="headerbox1">
+                <li><a href="index.html">Schools & preschools&nbsp;<i class="fa-solid fa-school"></i></a></li>
+                <li><a href="visit.html">Visit&nbsp; <i class="fa-solid fa-map"></i></a></li>
+                <li><a href="support.html">Contact information&nbsp;<i class="fa-solid fa-headset"></i></a></li>
+                <li><a href="about.html">More about CSM&nbsp;<i class="fa-solid fa-circle-info"></i></a></li>
+            </ul>
         <label for="hamburger-menu">
-            <i class="fas fa-bars"></i>
+            <i id="menu" class="fas fa-bars"></i>
           </label>
           <input type="checkbox" id="hamburger-menu">
           <nav class="hamburger">
             <ul>
               <li><a href="index.html">Schools & preschools</a></li>
-              <li><a href="about.html">Internships</a></li>
-              <li><a href="contact.html">Contact information</a></li>
-              <li><a href="contact.html">information about CSM</a></li>
+              <li><a href="visit.html">Visit</a></li>
+              <li><a href="support.html">Contact information</a></li>
+              <li><a href="about.html">More about CSM</a></li>
             </ul>
           </nav>
     </header>
-    <img src="imgs/billetto-editorial-334686.jpg" alt="img av et barn" class="imgteacher">
-    <h1 class="info-text1">
-        As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.
-        Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.
-
-    </h1>
-    <img src="imgs/teacher-2816112.jpg" alt="Tenge bilde av en lærer" class="imgteacher">
-    <hr>
-<footer>
-    <h2>
-        Stay in the loop
-    </h2>
-    <p class="subscribe">
-        Subscribe to the CSM's newsletter
-    </p>
-    <div class="boxnmail">
-        <form>
-            <input class="square-left" type="text" id="email" name="email" placeholder="Your email...">
-        </form>       
-        <button class="square-right">Send</button>
-    </div>
-    <div class="square-under">
-        <p class="checkbox-text">
-        <input type="checkbox"> i have read and approved the register declaration.</p>
+    <div class="gridbox2">
+        <img id="imgteacher1" src="imgs/billetto-editorial-334686.jpg" alt="img an student" class="imgteacher">
+        <h1 id="infotext1" class="info-text1">
+            As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.
+            Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.
+        </h1>
+        <img id="imgteacher2" src="imgs/teacher-2816112.jpg" alt="Tenge bilde av en lærer" class="imgteacher">
     </div>
     <hr>
-    <p class="title">
-        CSM
-    </p>
-    <p class="title2">
-        Community Science Museum
-    </p>
-    <p class="title1">
-        Opening hours
-    </p>
-    <div class="title2">
-        <p>
-        Monday: Closed
-        </p>
-         <p>
-        Tuseday: 10:00 - 16:00
-        </p>
-         <p>
-        Wednesday: 10:00 - 16:00
-        </p>
-         <p>
-        Thursday: 10:00 - 16:00
-        </p>
-         <p>
-        Friday: 10:00 - 19:00
-        </p>
-         <p>
-        Saturday: 9:00 - 16:00
-        </p>
-         <p>
-        Sunday 9:00 - 13:00
-        </p>
-    </div>
-    <hr>
-    <div class="boxfooter">
-        <nav>
-            <ul class="footer-nav">
-                <li>
-                    <a href="aboutus.html" class="title3">Contact information</a>
-                </li>
-                <li>
-                    <a href="support.html" class="title3">Schools & preschools</a>
-                </li>
-                <li>
-                    <a href="faq.html" class="title3">information about CSM</a>
-                </li>
-                <li>
-                    <a href="login.html" class="title3">Internships</a>
-                </li>
-            </ul>
-        </nav>
-        <img src="imgs/icon-1719742.svg" alt="logobilde av CSM" class="logoimg">
-    </div>
-    <p class="copyright">
-        © 2023 Community Science Museum 
-        All rights reserved. 
-    </p>
-</footer>
+    <footer>
+        <div class="center">
+            <div class="footer-container">
+                <h2>
+                    Stay in the loop
+                </h2>
+                <p class="subscribe">
+                    Subscribe to the CSM's newsletter
+                </p>
+                <div class="boxnmail">
+                    <form>
+                        <input class="square-left" type="text" id="email" name="email" placeholder="Your email...">
+                    </form>       
+                    <button class="square-right">Send</button>
+                </div>
+                <div class="square-under">
+                    <p class="checkbox-text">
+                    <input type="checkbox"> i have read and approved the register declaration.</p>
+                </div>
+                <hr id="hide">
+                <p class="title">
+                    CSM
+                </p>
+                <p id="csm" class="title2">
+                    Community Science Museum
+                </p>
+                <p class="title1">
+                    Opening hours
+                </p>
+                <div class="title2">
+                    <p>
+                    Monday: Closed
+                    </p>
+                     <p>
+                    Tuseday: 10:00 - 16:00
+                    </p>
+                     <p>
+                    Wednesday: 10:00 - 16:00
+                    </p>
+                     <p>
+                    Thursday: 10:00 - 16:00
+                    </p>
+                     <p>
+                    Friday: 10:00 - 19:00
+                    </p>
+                     <p>
+                    Saturday: 9:00 - 16:00
+                    </p>
+                     <p>
+                    Sunday 9:00 - 13:00
+                    </p>
+                </div>
+                <hr id="hide">
+                <div class="boxfooter">
+                    <nav>
+                        <ul class="footer-nav">
+                          <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                          <li><a class="title3" href="visit.html">Visit</a></li>
+                          <li><a class="title3" href="support.html">Contact information</a></li>
+                          <li><a class="title3" href="news.html">More about CSM</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <img src="imgs/icon-1719742.svg" alt="logobilde av CSM" class="logoimg">
+                <p class="copyright">
+                    © 2023 Community Science Museum 
+                    All rights reserved. 
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
