--- a/index.html
+++ b/index.html
@@ -20,8 +20,14 @@
             </div>
             <input type="text" class="search-input" placeholder="Search...">
         </div>
+            <ul class="headerbox1">
+                <li><a href="index.html">Schools & preschools&nbsp;<i class="fa-solid fa-school"></i></a></li>
+                <li><a href="visit.html">Visit&nbsp; <i class="fa-solid fa-map"></i></a></li>
+                <li><a href="support.html">Contact information&nbsp;<i class="fa-solid fa-headset"></i></a></li>
+                <li><a href="about.html">More about CSM&nbsp;<i class="fa-solid fa-circle-info"></i></a></li>
+            </ul>
         <label for="hamburger-menu">
-            <i class="fas fa-bars"></i>
+            <i id="menu" class="fas fa-bars"></i>
           </label>
           <input type="checkbox" id="hamburger-menu">
           <nav class="hamburger">
@@ -118,72 +124,74 @@
     </div>
 </div>
 <footer>
-    <div class="footer-container">
-        <h2>
-            Stay in the loop
-        </h2>
-        <p class="subscribe">
-            Subscribe to the CSM's newsletter
-        </p>
-        <div class="boxnmail">
-            <form>
-                <input class="square-left" type="text" id="email" name="email" placeholder="Your email...">
-            </form>       
-            <button class="square-right">Send</button>
-        </div>
-        <div class="square-under">
-            <p class="checkbox-text">
-            <input type="checkbox"> i have read and approved the register declaration.</p>
-        </div>
-        <hr id="hide">
-        <p class="title">
-            CSM
-        </p>
-        <p id="csm" class="title2">
-            Community Science Museum
-        </p>
-        <p class="title1">
-            Opening hours
-        </p>
-        <div class="title2">
-            <p>
-            Monday: Closed
+    <div class="center">
+        <div class="footer-container">
+            <h2>
+                Stay in the loop
+            </h2>
+            <p class="subscribe">
+                Subscribe to the CSM's newsletter
             </p>
-             <p>
-            Tuseday: 10:00 - 16:00
+            <div class="boxnmail">
+                <form>
+                    <input class="square-left" type="text" id="email" name="email" placeholder="Your email...">
+                </form>       
+                <button class="square-right">Send</button>
+            </div>
+            <div class="square-under">
+                <p class="checkbox-text">
+                <input type="checkbox"> i have read and approved the register declaration.</p>
+            </div>
+            <hr id="hide">
+            <p class="title">
+                CSM
             </p>
-             <p>
-            Wednesday: 10:00 - 16:00
+            <p id="csm" class="title2">
+                Community Science Museum
             </p>
-             <p>
-            Thursday: 10:00 - 16:00
+            <p class="title1">
+                Opening hours
             </p>
-             <p>
-            Friday: 10:00 - 19:00
-            </p>
-             <p>
-            Saturday: 9:00 - 16:00
-            </p>
-             <p>
-            Sunday 9:00 - 13:00
-            </p>
-        </div>
-        <hr id="hide">
-        <div class="boxfooter">
-            <nav>
-                <ul class="footer-nav">
-                  <li><a class="title3" href="index.html">Schools & preschools</a></li>
-                  <li><a class="title3" href="visit.html">Visit</a></li>
-                  <li><a class="title3" href="support.html">Contact information</a></li>
-                  <li><a class="title3" href="news.html">More about CSM</a></li>
-                </ul>
-            </nav>
+            <div class="title2">
+                <p>
+                Monday: Closed
+                </p>
+                 <p>
+                Tuseday: 10:00 - 16:00
+                </p>
+                 <p>
+                Wednesday: 10:00 - 16:00
+                </p>
+                 <p>
+                Thursday: 10:00 - 16:00
+                </p>
+                 <p>
+                Friday: 10:00 - 19:00
+                </p>
+                 <p>
+                Saturday: 9:00 - 16:00
+                </p>
+                 <p>
+                Sunday 9:00 - 13:00
+                </p>
+            </div>
+            <hr id="hide">
+            <div class="boxfooter">
+                <nav>
+                    <ul class="footer-nav">
+                      <li><a class="title3" href="index.html">Schools & preschools</a></li>
+                      <li><a class="title3" href="visit.html">Visit</a></li>
+                      <li><a class="title3" href="support.html">Contact information</a></li>
+                      <li><a class="title3" href="news.html">More about CSM</a></li>
+                    </ul>
+                </nav>
+            </div>
             <img src="imgs/icon-1719742.svg" alt="logobilde av CSM" class="logoimg">
+            <p class="copyright">
+                © 2023 Community Science Museum 
+                All rights reserved. 
+            </p>
         </div>
-        <p class="copyright">
-            © 2023 Community Science Museum 
-            All rights reserved. 
-        </p>
     </div>
 </footer>
 </body>
